Formatted solutions with a comment pattern